# ot-harjoitustyo

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testausdokumentti.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: built.py  index.py  initialize_db.py
src/entities/: snippet.py  user.py
src/repositories/: snippet_repository.py  user_repository.py
src/services/: snippet_service.py  user_service.py
src/tests/: snippet_repository_test.py  snippet_service_test.py  user_repository_test.py  user_service_test.py
src/ui/: add_snippet_view.py  login_view.py  main_view.py  register_view.py  settings_view.py  text_based_ui.py  ui.py
