[tool.poetry]
name = "ohte-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["jhakkari <juuso.hakkari@helsinki.fi>"]
readme = "README.md"
packages = [{include = "ohte_harjoitustyo"}]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^2.0.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.2"
autopep8 = "^2.0.2"
coverage = "^7.2.3"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
